--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "doctor-portal-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "deploy express to vercel",
   "main": "index.js",
+  "engines":{
+    "node":"14.x"},
   "scripts": {
     "start": "node index.js",
-    "start-dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "nodemon index.js"
+    
   },
   "keywords": [],
   "author": "",
