--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   
   "description": "deploy express to vercel",
   "main": "index.js",
-  "type":"module",
+  "type":"commonjs",
   "engines":{
-    "node":"14.x"},
+    "node":"16.x"},
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js"
