--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.2",
-    "firebase-admin": "^11.0.1",
-    "generator-express-es6": "^1.1.0"
+    "firebase-admin": "^11.0.1"
   }
 }
