--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,16 @@
 "version": 2,
 "builds": [
 {
-"src": "index.js",
-"use": "@now/node"
+"src": "./index.js",
+"use": "@vercel/node"
 }
 ],
 "routes": [
 {
 
-"src": "/",
+"src": "/(.*)",
 
-"dest": "index.js"
+"dest": "./index.js"
 }
 ]
 }
