--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "description": "deploy express to vercel",
   "main": "index.js",
- 
- 
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.2",
-    "firebase-admin": "^11.0.1"
+    "express": "^4.18.1",
+    "firebase-admin": "^11.0.1",
+    "mongodb": "^4.10.0",
+    "nodemon": "^2.0.20"
   }
 }
