--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "deploy express to vercel",
   "main": "index.js",
+  "type": "module",
+
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js"
