--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "deploy express to vercel",
   "main": "index.js",
   "type": "commonjs",
-
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js"
@@ -13,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
