--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "env-parser": "^1.0.1",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
     "mongodb": "^4.10.0",
