--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "doctor-portal-server",
   "version": "1.0.0",
-  "description": "deploy express to vercel",
+  "description": "",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js"
